--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # .env
-TOKEN='MTA2Mzg3ODQxNzI4MTQ3MDU5NQ.G1aDQh.TsNl-bp0jnKsKOfbQ7BbSEQSoanBuz-W7ua-y4'
+TOKEN='MTA2Mzg3ODQxNzI4MTQ3MDU5NQ.G-njZh.ARq1VDuakh4tkFvjFtwGsGBzMiGDx7Jj5TonKc'
 GUILD="1063878417281470595"
