--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # .env
-TOKEN='MTA2Mzg3ODQxNzI4MTQ3MDU5NQ.G-njZh.ARq1VDuakh4tkFvjFtwGsGBzMiGDx7Jj5TonKc'
-GUILD="1063878417281470595"
+TOKEN='<enter token here>'
+GUILD="<enter guild here>"
